--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -66,4 +66,50 @@
 .sidebar aside li {
   margin: 10px;
 }
+
+.transactions li {
+  margin: 30px auto;
+  border: 1px solid #f2f2f2;
+  -webkit-box-shadow: 3px 3px 5px rgba(50, 50, 50, 0.1);
+          box-shadow: 3px 3px 5px rgba(50, 50, 50, 0.1);
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  overflow: hidden;
+  border-left: 4px solid #1f9751;
+}
+
+.transactions li button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: #ddd;
+  color: #777;
+  border: none;
+  padding: 12px 8px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  line-height: 0;
+  font-size: 0.9em;
+  cursor: pointer;
+}
+
+.transactions li .name {
+  color: #777;
+  font-size: 1.4em;
+}
+
+.transactions li .amount {
+  margin-left: auto;
+  margin-right: 40px;
+  color: #777;
+  font-weight: bold;
+  font-size: 1.6em;
+}
 /*# sourceMappingURL=Home.module.css.map */
